examples/datalog/18_advanced_patterns/75_lookup_table.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_lookup
Knowledge graph 'test_lookup' created.
Switched to knowledge graph: test_lookup
> .kg use test_lookup
Switched to knowledge graph: test_lookup
> +orders[(1, 101, 2), (2, 102, 1), (3, 101, 3)].
Inserted 3 fact(s) into 'orders'.
> +products[(101, "Widget", 10.00), (102, "Gadget", 25.00)].
Inserted 2 fact(s) into 'products'.
> order_details(OId, ProdName, Qty, Total) :- orders(OId, ProdId, Qty), products(ProdId, ProdName, Price), Total = Price * Qty.
Script error: Query execution failed: Unsafe rule: Atom { relation: "order_details", args: [Variable("OId"), Variable("ProdName"), Variable("Qty"), Variable("Total")] }. Variables ["Total"] in head do not appear in positive body atoms.
