examples/datalog/18_advanced_patterns/75_lookup_table.dl
% Test: Lookup table pattern
% Expected: Enrich data with lookup values
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_lookup
.kg use test_lookup

+orders[(1, 101, 2), (2, 102, 1), (3, 101, 3)].
+products[(101, "Widget", 10.00), (102, "Gadget", 25.00)].

% Enrich orders with product info
order_details(OId, ProdName, Qty, Total) :-
    orders(OId, ProdId, Qty),
    products(ProdId, ProdName, Price),
    Total = Price * Qty.

?- order_details(OId, ProdName, Qty, Total).

.kg use default
.kg drop test_lookup
